add observable module

--- a/examples/src/app/app.component.html
+++ b/examples/src/app/app.component.html
@@ -4,5 +4,6 @@
 <ul>
   <li><a [routerLink]="['intro']">Intro</a></li>
   <li><a [routerLink]="['validation']">Validation</a></li>
+  <li><a [routerLink]="['observable']">Observable</a></li>
 </ul>
 <router-outlet></router-outlet>
