--- a/examples/src/app/app.component.html
+++ b/examples/src/app/app.component.html
@@ -5,5 +5,6 @@
   <li><a [routerLink]="['intro']">Intro</a></li>
   <li><a [routerLink]="['validation']">Validation</a></li>
   <li><a [routerLink]="['observable']">Observable</a></li>
+  <li><a [routerLink]="['other-statuses']">Other statuses</a></li>
 </ul>
 <router-outlet></router-outlet>
