--- a/examples/src/app/app.component.html
+++ b/examples/src/app/app.component.html
@@ -6,5 +6,6 @@
   <li><a [routerLink]="['validation']">Validation</a></li>
   <li><a [routerLink]="['observable']">Observable</a></li>
   <li><a [routerLink]="['other-statuses']">Other statuses</a></li>
+  <li><a [routerLink]="['complex-form']">Complex form</a></li>
 </ul>
 <router-outlet></router-outlet>
