--- a/examples/src/app/complex-form/complex-form-root/complex-form-root.component.html
+++ b/examples/src/app/complex-form/complex-form-root/complex-form-root.component.html
@@ -1,3 +1,7 @@
-<p>
-  complex-form-root works!
-</p>
+<h2>Complex form</h2>
+<ul>
+  <li><a [routerLink]="['form-field-splitting']">Form field splitting</a></li>
+  <li><a [routerLink]="['dynamic-fields']">Dynamic fields</a></li>
+  <li><a [routerLink]="['recursive-form']">Recursive form</a></li>
+</ul>
+<router-outlet></router-outlet>
