--- a/examples/src/app/other-statuses/submitted-form/submitted-form.component.html
+++ b/examples/src/app/other-statuses/submitted-form/submitted-form.component.html
@@ -1,3 +1,5 @@
+<h3>Submitted</h3>
+
 submitted: {{formGroupDirective?.submitted}}
 <form [formGroup]="formGroup" (submit)="submit()">
   <input formControlName="name" type="text">
