--- a/examples/src/styles.css
+++ b/examples/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+input:focus {
+  outline: 0;
+}
+
+input {
+  border: 1px solid #ddd;
+}
