--- a/examples/src/app/complex-form/form-field-splitting/form-field-splitting.component.html
+++ b/examples/src/app/complex-form/form-field-splitting/form-field-splitting.component.html
@@ -1,3 +1,6 @@
-<p>
-  form-field-splitting works!
-</p>
+<h3>Form field splitting</h3>
+
+<form [formGroup]="formGroup">
+  <product-form-field [group]="formGroup.get('products.0')"></product-form-field>
+  <product-form-field [group]="formGroup.get('products.1')"></product-form-field>
+</form>
