--- a/examples/src/app/observable/incremental-search/incremental-search.component.html
+++ b/examples/src/app/observable/incremental-search/incremental-search.component.html
@@ -1,3 +1,7 @@
-<p>
-  incremental-search works!
-</p>
+<h3>Incremental search</h3>
+
+<form [formGroup]="formGroup">
+  <div><input formControlName="query" type="text"></div>
+</form>
+
+<div *ngFor="let result of results">{{ result }}</div>
